test/src/objects/line_item__c.object
<CustomObject>
    <fields>
        <fullName>invoice_statement__c</fullName>
        <label>invoice statement</label>
        <referenceTo>invoice_statement__c</referenceTo>
        <relationshipLabel>line items</relationshipLabel>
        <relationshipName>line_items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>merchandise__c</fullName>
        <label>merchandise</label>
        <referenceTo>merchandise__c</referenceTo>
        <relationshipLabel>line items</relationshipLabel>
        <relationshipName>line_items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>unit_price__c</fullName>
        <label>unit price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>units_sold__c</fullName>
        <label>units sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>value__c</fullName>
        <formula>unit_price__c  *  units_sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>line item</label>
    <nameField>
        <label>line item number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>line items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>order_in_stock</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
ISNEW(),
merchandise__r.Total_Inventory__c &lt; units_sold__c,
IF( 
      units_sold__c &lt; PRIORVALUE( units_sold__c ),
       FALSE,
       merchandise__r.Total_Inventory__c &lt; (units_sold__c-PRIORVALUE( units_sold__c ))
)
)</errorConditionFormula>
        <errorDisplayField>units_sold__c</errorDisplayField>
        <errorMessage>You have ordered more items than we have in the stock</errorMessage>
    </validationRules>
</CustomObject>